--- a/website/templates/result-folder.html
+++ b/website/templates/result-folder.html
@@ -24,6 +24,7 @@
                     <td style="background-color: white;">{{file.question}}</td>
                     <td style="background-color: white; text-align: center;">{{file.name}}</td>
                     <td style="background-color: white; width: 160px; color: {% if file.system_score >= 3.0 %}green{% else %}red{% endif %}; text-align: center;"><strong>{{file.system_score}}</strong></td>
+                    <td style="background-color: white; width: 160px; text-align: center;">{{ file.equivalent_score }}</td>
                 </tr>
                 
                 {% endfor %}
