--- a/website/templates/result-folder.html
+++ b/website/templates/result-folder.html
@@ -15,6 +15,7 @@
                     <th style="background-color: #333; width: 530px; text-align: center;">Question</th>
                     <th style="background-color: #333; width: 217px; text-align: center;">File Name</th>
                     <th style="background-color: #333; width: 160px; text-align: center;">System Score</th>
+                    <th style="background-color: #333; width: 160px; text-align: center;">Equivalent Percentage</th>
                 </tr>
             </thead>
             <tbody> 
