--- a/website/templates/analysis-result.html
+++ b/website/templates/analysis-result.html
@@ -25,7 +25,7 @@
                 {% endfor %}
             </tbody>
         </table>
-        <h1 class="jumbotron">TOTAL : {{total_average}}( {{ equivalent_percentage }} )</h1>
+        <h1 class="jumbotron">TOTAL : {{total_average}}</h1>
         
     </main>
     
