--- a/website/templates/result-folder.html
+++ b/website/templates/result-folder.html
@@ -23,7 +23,7 @@
                     <td style="background-color: white;width: 200px; text-align: center;">{{file.student_number}}</td>
                     <td style="background-color: white;">{{file.question}}</td>
                     <td style="background-color: white; text-align: center;">{{file.name}}</td>
-                    <td style="background-color: white; width: 160px; color: {% if file.system_score >= 3.0 %}green{% else %}red{% endif %}; text-align: center;"><strong>{{file.system_score}}</strong>/5</td>
+                    <td style="background-color: white; width: 160px; color: {% if file.system_score >= 3.0 %}green{% else %}red{% endif %}; text-align: center;"><strong>{{file.system_score}}/5</strong></td>
                 </tr>
                 
                 {% endfor %}
