--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -263,6 +263,29 @@ function displaySelectedCriteria() {
     }
   }
 </script>
+<script>
+  function setDefaultCriteria() {
+  var criteriaSelect = document.getElementById("criteria");
+  var selectedOptions = [...criteriaSelect.selectedOptions].map(option => option.value);
+
+  // Save the default criteria to localStorage
+  localStorage.setItem("defaultCriteria", JSON.stringify(selectedOptions));
+
+  alert("Default criteria set to: " + selectedOptions.join(", "));
+}
+
+// Load default criteria if available
+window.onload = function() {
+  var defaultCriteria = localStorage.getItem("defaultCriteria");
+  if (defaultCriteria) {
+    var criteriaSelect = document.getElementById("criteria");
+    var selectedOptions = JSON.parse(defaultCriteria);
+    selectedOptions.forEach(option => {
+      criteriaSelect.querySelector(`option[value="${option}"]`).selected = true;
+    });
+  }
+};
+</script>
 
 {% endblock %}
   </body>
