--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -58,6 +58,7 @@
             <option value="Grammar">Grammar and Language Usage </option>
             <option value="Focus and Details">Focus and Details </option>
           </select>
+          <button type="button" onclick="setDefaultCriteria()">Set Default Criteria</button>
         </form>
         <div style="margin-top: 35px; text-align: center;">
           <div id="relevancePopup" class="relevance" style="margin: 0 auto; width: 100%;">
