--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -50,7 +50,7 @@
       <div class="group-essay">
         <label> Assessment Criteria: </label>
         <form action="" method="POST" id="multi-select">
-            <select name="criteria" id="criteria" class="form-control selectpicker" data-live-search="true" multiple style="border: 1px solid black !important; border-radius: 4px !important; color: black !important;">-+
+            <select name="criteria" id="criteria" class="form-control selectpicker" data-none-selected-text="Select all that may apply" data-live-search="true" data-live-search-placeholder="Search criteria" multiple style="border: 1px solid black !important; border-radius: 4px !important; color: black !important;">-+
             <option value="Clarity">Clarity of Expression </option>
             <option value="Organization">Structural Organization </option>
             <option value="Relevance">Relevance of Content </option>  
