--- a/website/templates/analysis-result.html
+++ b/website/templates/analysis-result.html
@@ -18,7 +18,7 @@
             <tbody> 
                 {% for item in data %}
                     <tr>
-                        <td style="background-color: white;width: 200px; text-align: center;">{{item.student_number}}</td>
+                        <td style="background-color: white;width: 200px; text-align: center;">{{item.student_name}}</td>
                         <td style="background-color: white;width: 200px; text-align: center;">{{item.criteria}}</td>
                         <td style="background-color: white;width: 200px; text-align: center;">{{item.average}}</td>
                     </tr> 
