--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -43,7 +43,7 @@
                 <form action="/assess" method="post" enctype="multipart/form-data">
                     <label for="additionalQuestion1">Question:</label>
                     <input type="text" class="form-control" id="additionalQuestion1" name="additionalQuestion1">
-                    <label style="padding-top: 20px"for="studentNumber">Student Number:</label>
+                    <label style="padding-top: 20px"for="studentNumber">Student Name:</label>
                     <input type="text" class="form-control" id="studentNumber" name="studentNumber">
   
   
