--- a/website/templates/result-folder.html
+++ b/website/templates/result-folder.html
@@ -11,7 +11,7 @@
         <table class="table table-striped table-bordered table-hover table-responsive">
             <thead class="thead-dark">
                 <tr>
-                    <th style="background-color: #333; width: 200px; text-align: center;">Student Number</th>
+                    <th style="background-color: #333; width: 200px; text-align: center;">Student Name</th>
                     <th style="background-color: #333; width: 530px; text-align: center;">Question</th>
                     <th style="background-color: #333; width: 217px; text-align: center;">File Name</th>
                     <th style="background-color: #333; width: 160px; text-align: center;">System Score</th>
