--- a/website/templates/analysis-result.html
+++ b/website/templates/analysis-result.html
@@ -10,7 +10,7 @@
         <table class="table table-striped table-bordered table-hover table-responsive">
             <thead class="thead-dark">
                 <tr>
-                    <th style="background-color: #333; width: 200px; text-align: center;">Student Number</th>
+                    <th style="background-color: #333; width: 200px; text-align: center;">Student Name</th>
                     <th style="background-color: #333; width: 530px; text-align: center;">Criteria</th>
                     <th style="background-color: #333; width: 530px; text-align: center;">Average</th>
                 </tr>
