--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -97,6 +97,9 @@
     <p><strong>Question:</strong> {{ question }}</p>
     <p><strong>Student Name: </strong>{{ student_number }}</p>
     <p><strong>Uploaded File: {{ uploaded_file_name }}</p>
+    <p><strong>Essay Content: <textarea rows="10" cols="30 " name="essay_content">
+        {{ essay_text_content }}
+      </textarea></p>
   </div>
   <div id="selected-criteria">
     {% if results %}
@@ -158,6 +161,7 @@
       <input type="hidden" name="question" value="{{ question }}">
       <input type="hidden" name="student_number" value="{{ student_number }}">
       <input type="hidden" name="essay" value="{{ uploaded_file_name }}">
+      <input type="hidden" name="essay_content" value="{{ essay_text_content }}">
       {% for criterion, result in results.items() %}
         <input type="hidden" name="result" value="{{ criterion }}: {{ result }}">
       {% endfor %}
